[package]
name = "api-tool-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = "4.3.10"
rusty-hook = "0.11.2"
env_logger = "0.10.0"
log = "0.4.19"
rhai = "1.15.0"
jsonpath_lib = "0.3.0"
jsonpath = "0.1.1"
regex = "1.8.4"
dotenv = "0.15.0"
anyhow = "1.0"
claim = "0.5.0"
miette = {version="5.9.0", features=["fancy"]}
thiserror = "1.0.43"
serde_with = "3.0.0"
colored_json = "3"

[dev-dependencies]
httpmock = "0.6"
testing_logger = "0.1.1"

