[package]
name = "testkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.29.1", features = ["full"] }
clap = { version = "4.3.10", features = ["derive"] }
rusty-hook = "0.11.2"
env_logger = "0.10.0"
log = "0.4.19"
rhai = "1.15.0"
jsonpath_lib = "0.3.0"
jsonpath = "0.1.1"
regex = "1.8.4"
dotenv = "0.15.0"
anyhow = "1.0"
miette = { version = "5.9.0", features = ["fancy"] }
thiserror = "1.0.43"
serde_with = "3.0.0"
colored_json = "3"

# TODO: gate the desktop only dependencies behind a feature gate
dioxus = { git = "https://github.com/DioxusLabs/dioxus/" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus/" }
chrono = "0.4.26"
dioxus-logger = "0.4.1"
# dioxus-web = { git = "https://github.com/DioxusLabs/dioxus/" }
# dioxus-hot-reload = { git = "https://github.com/DioxusLabs/dioxus/" }
# dioxus-hot-reload = "0.1.1"
# dioxus = "0.3.2"
# dioxus-desktop = "0.3.0"
# dioxus-web = "0.3.2"
# core-foundation = {git="https://github.com/servo/core-foundation-rs", rev="9effb788767458ad639ce36229cc07fd3b1dc7ba"}

[dev-dependencies]
httpmock = "0.6"
testing_logger = "0.1.1"
