[package]
name = "testkit"
version = "0.1.5"
edition = "2021"
license = "MIT/Apache-2.0"
description = "A DSL for testing. Starting with APIs and Browser automation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "testkit"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.29.1", features = ["full"] }
clap = { version = "4.3.10", features = ["derive"] }
rusty-hook = "0.11.2"
env_logger = "0.11.3"
log = "0.4.19"
rhai = "1.15.0"
jsonpath_lib = "0.3.0"
jsonpath = "0.1.1"
regex = "1.8.4"
dotenv = "0.15.0"
libc = "0.2"
anyhow = "1.0"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.43"
serde_with = "3.0.0"
colored_json = "5"
chrono = "0.4.26"
walkdir = "2.3.3"
# core-foundation = {git="https://github.com/servo/core-foundation-rs", rev="9effb788767458ad639ce36229cc07fd3b1dc7ba"}

[dev-dependencies]
httpmock = "0.7"
testing_logger = "0.1.1"
